ClusterDisruptionIT.java